# todo-axum

./: .gitignore  Cargo.toml  Readme.md  compose.yaml  flake.nix  private.pem
.direnv/: flake-profile-1-link
migrations/: 20240128182124_todos.sql  20240128183946_todos.sql
src/: error.rs  main.rs  models.rs
src/routes/: authentication.rs  routes.rs
