[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = { version = "0.7.4", features = ["form"] }
axum-error = "0.2.0"
axum-extra = {version = "0.9.2", features = ["typed-header"]}
axum-macros = "0.4.1"
chrono = "0.4.34"
cookie = {version = "0.18.0", features = ["secure", "percent-encode"]}
dotenv = "0.15.0"
serde_json = "1.0.104"
jsonwebtoken = "9.2.0"
serde = { version = "1.0.196", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "tls-rustls", "postgres", "time"] }
time = {version = "0.3.34", features = ["serde"]}
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
tower-cookies = "0.10.0"
tower-http = { version = "0.5.1", features = ["cors"] }
tracing-subscriber = "0.3.18"

